infra/k8s/overlays/prod/namespace.yaml
# Production Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
    environment: production
